--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ django-cors-headers==4.7.0
 pillow==11.2.1
 djangorestframework==3.16.0
 django-debug-toolbar==5.2.0
+django-filter==3.8.1
 reportlab==4.4.1
 qrcode==8.2
 psycopg2==2.9.10
